// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots MapLegend Loading 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="MapLegend__StyledContainer-sc-1s1tm5k-0 gRzBmY"
  >
    <div
      className="MapLegendSkeleton__Style-bfdz79-1 eOAGEj"
    >
      <div
        className="MapLegendSkeleton__StyledContainer-bfdz79-0 cyMWGv"
      >
        <i
          className="Skeleton__StyledSkeleton-imrnkm-0 jqlAbU"
          height="15px"
          opacity="1"
          width="50%"
        />
        <i
          className="Skeleton__StyledSkeleton-imrnkm-0 fkxxdy"
          height="8px"
          opacity="1"
          width="30%"
        />
        <i
          className="Skeleton__StyledSkeleton-imrnkm-0 jROCNn"
          height="10px"
          opacity="1"
          width="100%"
        />
        <div
          className="MapLegendSkeleton__StyledMinMax-bfdz79-2 fiBVbE"
        >
          <i
            className="Skeleton__StyledSkeleton-imrnkm-0 ijteZt"
            height="8px"
            opacity="1"
            width="50px"
          />
          <i
            className="Skeleton__StyledSkeleton-imrnkm-0 ijteZt"
            height="8px"
            opacity="1"
            width="50px"
          />
        </div>
      </div>
      <div
        className="MapLegendSkeleton__StyledActions-bfdz79-3 jMVTnE"
      >
        <span
          className="MapLegendSkeleton__StyledAction-bfdz79-4 bBJNJl"
        >
          <i
            className="Skeleton__StyledSkeleton-imrnkm-0 dAsGCI"
            height="10px"
            opacity="1"
            width="20px"
          />
        </span>
        <span
          className="MapLegendSkeleton__StyledAction-bfdz79-4 bBJNJl"
        >
          <i
            className="Skeleton__StyledSkeleton-imrnkm-0 dAsGCI"
            height="10px"
            opacity="1"
            width="20px"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots MapLegend Playground 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="MapLegend__StyledContainer-sc-1s1tm5k-0 gRzBmY"
  >
    <div
      className="MapLegend__StyledWrapper-sc-1s1tm5k-1 iHoiQN"
    >
      <header
        className="MapLegend__StyledTitle-sc-1s1tm5k-2 jpSsIc"
      >
        Legend
      </header>
      <div
        className="MapLegend__StyledDescription-sc-1s1tm5k-3 iZSflf"
      >
        Lorem ipsum
      </div>
      <div
        className="MapLegend__StyledRangeColors-sc-1s1tm5k-4 jDVGxW"
      >
        <i
          className="MapLegend__StyledColor-sc-1s1tm5k-7 cQXRCv"
          color="#03045E"
        />
        <i
          className="MapLegend__StyledColor-sc-1s1tm5k-7 brMHIz"
          color="#ADE8F4"
        />
        <i
          className="MapLegend__StyledColor-sc-1s1tm5k-7 enCAYq"
          color="#90D8EF"
        />
        <i
          className="MapLegend__StyledColor-sc-1s1tm5k-7 kFELMQ"
          color="#48B5E4"
        />
        <i
          className="MapLegend__StyledColor-sc-1s1tm5k-7 kxSwKA"
          color="#008BC7"
        />
        <i
          className="MapLegend__StyledColor-sc-1s1tm5k-7 kEjvGk"
          color="#0077B6"
        />
        <i
          className="MapLegend__StyledColor-sc-1s1tm5k-7 dqoQhO"
          color="#023E8A"
        />
        <i
          className="MapLegend__StyledColor-sc-1s1tm5k-7 cQXRCv"
          color="#03045E"
        />
      </div>
      <div
        className="MapLegend__StyledMinMaxText-sc-1s1tm5k-8 kfScoS"
      >
        <span>
          Minium
        </span>
        <span>
          Max
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots MapLegend With Actions 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="MapLegend__StyledContainer-sc-1s1tm5k-0 gRzBmY"
  >
    <div
      className="MapLegend__StyledWrapper-sc-1s1tm5k-1 iHoiQN"
    >
      <header
        className="MapLegend__StyledTitle-sc-1s1tm5k-2 jpSsIc"
      >
        Legend
      </header>
      <div
        className="MapLegend__StyledDescription-sc-1s1tm5k-3 iZSflf"
      >
        Lorem ipsum
      </div>
      <div
        className="MapLegend__StyledRangeColors-sc-1s1tm5k-4 jDVGxW"
      >
        <i
          className="MapLegend__StyledColor-sc-1s1tm5k-7 cQXRCv"
          color="#03045E"
        />
        <i
          className="MapLegend__StyledColor-sc-1s1tm5k-7 brMHIz"
          color="#ADE8F4"
        />
        <i
          className="MapLegend__StyledColor-sc-1s1tm5k-7 enCAYq"
          color="#90D8EF"
        />
        <i
          className="MapLegend__StyledColor-sc-1s1tm5k-7 kFELMQ"
          color="#48B5E4"
        />
        <i
          className="MapLegend__StyledColor-sc-1s1tm5k-7 kxSwKA"
          color="#008BC7"
        />
        <i
          className="MapLegend__StyledColor-sc-1s1tm5k-7 kEjvGk"
          color="#0077B6"
        />
        <i
          className="MapLegend__StyledColor-sc-1s1tm5k-7 dqoQhO"
          color="#023E8A"
        />
        <i
          className="MapLegend__StyledColor-sc-1s1tm5k-7 cQXRCv"
          color="#03045E"
        />
      </div>
      <div
        className="MapLegend__StyledMinMaxText-sc-1s1tm5k-8 kfScoS"
      >
        <span>
          Minium
        </span>
        <span>
          Max
        </span>
      </div>
    </div>
    <footer
      className="MapLegend__StyledActions-sc-1s1tm5k-9 chxcJB"
    >
      <div
        className="MapLegend__Action-sc-1s1tm5k-10 fTrIRR"
        onClick={[Function]}
      >
        Sale
      </div>
      <div
        className="MapLegend__Action-sc-1s1tm5k-10 kBVARO"
        onClick={[Function]}
      >
        Rent
      </div>
    </footer>
  </div>
</div>
`;

exports[`Storyshots MapLegend With Points 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="MapLegend__StyledContainer-sc-1s1tm5k-0 gRzBmY"
  >
    <div
      className="MapLegend__StyledWrapper-sc-1s1tm5k-1 iHoiQN"
    >
      <header
        className="MapLegend__StyledTitle-sc-1s1tm5k-2 jpSsIc"
      >
        Legend
      </header>
      <div
        className="MapLegend__StyledDescription-sc-1s1tm5k-3 iZSflf"
      >
        Lorem ipsum
      </div>
      <div
        className="MapLegend__StylePoints-sc-1s1tm5k-5 hjpmot"
      >
        <div
          className="MapLegend__StyledPointElement-sc-1s1tm5k-6 cILSmo"
          color="#1B817A"
        >
          <span />
          <span>
            Exact address
          </span>
        </div>
        <div
          className="MapLegend__StyledPointElement-sc-1s1tm5k-6 fXUbQx"
          color="#EDBE96"
        >
          <span />
          <span>
            No exact address
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
